# thetallm

./: .gitignore  README.md
.github/workflows/: deploy-backend.yml
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/services/: brain.py  facebook.py
infra/: nginx.conf  theta-backend.service
theta-back/: .env.example  deploy_trigger.txt  pyproject.toml  requirements.txt  teramind.db
theta-back/app/: main.py  teramind.db
theta-back/app/core/: config.py
theta-back/app/models/: available.txt
theta-back/app/services/: brain.py  db.py  facebook.py
theta-back/tests/: check_models.py  debug_embed.html  debug_mbasic.html  debug_scrapper.py  local_chat.py
theta-front/: package-lock.json  package.json
theta-front/src/app/: globals.css  layout.tsx  page.tsx
theta-front/src/app/privacy/: page.tsx
